@@ -68,8 +68,7 @@ func newManaged(
 
 	path := info.AgentConfigFile()
 
-	// TODO(ph): Define the encryption password.
-	store := storage.NewEncryptedDiskStore(path, []byte(""))
+	store := storage.NewDiskStore(path)
 	reader, err := store.Load()
 	if err != nil {
 		return nil, errors.New(err, "could not initialize config store",
